tests/sumo/errors/routes/stops/too_close/errors.sumo
Error: Vehicle 'veh0' will not be able to depart on lane 'SC_0' with speed 20.00 (scheduled stop on lane 'SC_0' too close), time=0.00.
